examples/deployments/k8s/argilla-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argilla-server-deployment
  labels:
    app: argilla-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argilla-server
  template:
    metadata:
      labels:
        app: argilla-server
    spec:
      containers:
        - name: argilla-server
          image: argilla/argilla-server:latest
          ports:
            - containerPort: 6900
          resources:
            requests:
              cpu: "0.5"
            limits:
              cpu: "1"
