examples/deployments/k8s/argilla-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argilla-server
  labels:
    app: argilla-server
spec:
  selector:
    app: argilla-server
  ports:
  - name: http
    port: 6900
